force-app/main/default/objects/DLC_Data_Load__c/DLC_Data_Load__c.object-meta.xml
<CustomObject>
    <label>Data Load</label>
    <nameField>
        <displayFormat>DL-{00000000}</displayFormat>
        <label>DL Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Data Loads</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>