force-app/main/default/objects/DLC_Data_Load__c/fields/DLC_Picklist_Field_Mappings__c.field-meta.xml
<CustomField>
    <fullName>DLC_Picklist_Field_Mappings__c</fullName>
    <label>Picklist Field Mappings</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>