force-app/main/default/objects/DLC_Data_Load__c/fields/DLC_sObject__c.field-meta.xml
<CustomField>
    <fullName>DLC_sObject__c</fullName>
    <label>sObject</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>